--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,13 @@
 /web/vendor
 /web/core
 /web/modules/README.txt
+/web/modules/contrib
 /web/profiles/README.txt
 /web/sites/development.services.yml
 /web/sites/example.settings.local.php
 /web/sites/example.sites.php
 /web/sites/README.txt
+/web/themes/contrib
 /web/themes/README.txt
 /web/.csslintrc
 /web/.editorconfig
@@ -60,3 +62,8 @@
 /drush
 /drupal.phar
 /drupal
+/.editorconfig
+/.gitattributes
+
+# DDEC
+.ddev
