--- a/web/themes/custom/icosaedrico/icosaedrico.info.yml
+++ b/web/themes/custom/icosaedrico/icosaedrico.info.yml
@@ -1,12 +1,12 @@
-name: Fluffiness
+name: Icosaédrico
 type: theme
-description: This is a fluffy sub theme of Stable 9
+description: 20 caras
 core_version_requirement: ^8 || ^9 || ^10
 # Defines the base theme
 base theme: stable9
 # Defines libraries group in which we can add CSS/JS.
 libraries:
-  - fluffiness/global-styling
+  - icosaedrico/global-styling
 # Regions, quote the names
 regions:
   header: Header
