add picture to avatar and other changes

--- a/web/themes/custom/icosaedrico/icosaedrico.info.yml
+++ b/web/themes/custom/icosaedrico/icosaedrico.info.yml
@@ -2,7 +2,6 @@ name: Icosaédrico
 type: theme
 description: 20 caras
 core_version_requirement: ^8 || ^9 || ^10
-logo: logo.png
 # Defines the base theme
 base theme: stable9
 # Defines libraries group in which we can add CSS/JS.
@@ -13,6 +12,6 @@ regions:
   header: Header
   content: Content
   footer: Footer
-#  featured: Featured
-#  sidebar_first: First sidebar
-#  sidebar_second: Second sidebar
+  featured: Featured
+  sidebar_first: First sidebar
+  sidebar_second: Second sidebar
