--- a/config/sync/field.field.user.user.user_picture.yml
+++ b/config/sync/field.field.user.user.user_picture.yml
@@ -22,17 +22,17 @@ default_value_callback: ''
 settings:
   handler: 'default:file'
   handler_settings: {  }
-  file_directory: 'pictures/[date:custom:Y]-[date:custom:m]'
+  file_directory: pictures/user-profile
   file_extensions: 'png gif jpg jpeg webp'
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: false
-  alt_field_required: false
+  alt_field: true
+  alt_field_required: true
   title_field: false
   title_field_required: false
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
