--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 /web/modules/README.txt
 /web/modules/contrib
 /web/profiles/README.txt
+/web/profiles
 /web/sites/development.services.yml
 /web/sites/example.settings.local.php
 /web/sites/example.sites.php
@@ -73,3 +74,4 @@
 
 # Backups
 /backups
+node_modules
