--- a/web/themes/custom/icosaedrico/package.json
+++ b/web/themes/custom/icosaedrico/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "tailwindcss -i ./css/styles.css -o ./css/output.css --minify",
-    "watch:css": "tailwindcss -i ./css/styles.css -o ./css/output.css --watch"
+    "build:scss": "node scripts/compile-scss.js",
+    "dev": "vite",
+    "build": "npm run build:scss && vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "glob": "^10.3.10",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.1",
+    "vite-plugin-glob": "^0.3.2",
+    "vite-plugin-sass-dts": "^1.3.17"
+  },
+  "dependencies": {
+    "simple-icons": "^11.3.0"
   }
 }
