--- a/web/themes/custom/icosaedrico/components/molecules/card/card.component.yml
+++ b/web/themes/custom/icosaedrico/components/molecules/card/card.component.yml
@@ -9,14 +9,12 @@ props:
       title: Title
       # @todo Add examples here.
       examples: []
+    card_media:
+        title: Card media
+        description: Image (or video content in a future)
     card_tags:
       type: string
       title: Tags
-      # @todo Add examples here.
-      examples: []
-    card_url:
-      type: string
-      title: URL
       # @todo Add examples here.
       examples: []
 slots:
@@ -24,6 +22,3 @@ slots:
   card_content:
       title: Card content
       description: Content of the chip
-  card_media:
-      title: Card media
-      description: Image or video content
