--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "@storybook/blocks": "^7.6.13",
     "@storybook/server": "^7.6.13",
     "@storybook/server-webpack5": "^7.6.13",
+    "daisyui": "^4.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.70.0",
+    "vite-plugin-glob": "^0.3.2",
+    "vite-plugin-sass-dts": "^1.3.17"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "dependencies": {
+    "simple-icons": "^11.4.0"
+  }
 }
