--- a/web/themes/custom/icosaedrico/package.json
+++ b/web/themes/custom/icosaedrico/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
     "glob": "^10.3.10",
     "postcss": "^8.4.35",
     "sass": "^1.70.0",
