--- a/web/themes/custom/icosaedrico/package.json
+++ b/web/themes/custom/icosaedrico/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.7.2",
     "glob": "^10.3.10",
