update icon component

--- a/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
+++ b/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
@@ -20,6 +20,11 @@ props:
         - right
         - bottom
         - left
+      enum:
+        - top
+        - right
+        - bottom
+        - left
     icon_svg_classes:
       type: string
       title: CSS classes for the icon element
