--- a/web/themes/custom/icosaedrico/components/organisms/alert/alert.component.yml
+++ b/web/themes/custom/icosaedrico/components/organisms/alert/alert.component.yml
@@ -11,6 +11,9 @@ props:
     alert_description:
       type: string
       title: Description
+    alert_icon:
+      type: string
+      title: Icon
     alert_type:
       type: string
       title: Type of alert
