--- a/web/themes/custom/icosaedrico/components/organisms/branding/branding.component.yml
+++ b/web/themes/custom/icosaedrico/components/organisms/branding/branding.component.yml
@@ -4,7 +4,14 @@ status: experimental
 props:
   type: object
   properties:
-    size:
+    branding_shape:
+      type: string
+      title: Style
+      examples:
+        - horizontal
+        - vertical
+        - square
+    branding_size:
       type: string
       title: Size
       examples:
