--- a/config/sync/field.field.paragraph.icon.field_icon_svg_stroke_width.yml
+++ b/config/sync/field.field.paragraph.icon.field_icon_svg_stroke_width.yml
@@ -1,5 +1,5 @@
-uuid: 3ea764c6-2947-419d-a717-e89cea6a3a03
-langcode: es
+uuid: 0a49c4b9-01ec-486d-aa14-757abc2cbee6
+langcode: en
 status: true
 dependencies:
   config:
@@ -10,16 +10,16 @@ field_name: field_icon_svg_stroke_width
 entity_type: paragraph
 bundle: icon
 label: 'Ancho de línea'
-description: 'Ancho de línea en pixels.'
+description: ''
 required: false
 translatable: false
 default_value:
   -
-    value: 2.0
+    value: 0
 default_value_callback: ''
 settings:
   min: null
   max: null
   prefix: ''
   suffix: ''
-field_type: decimal
+field_type: integer
