--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -33,6 +33,7 @@ module:
   inline_form_errors: 0
   language: 0
   layout_builder: 0
+  layout_builder_component_attributes: 0
   layout_discovery: 0
   link: 0
   locale: 0
@@ -67,6 +68,7 @@ module:
   responsive_image: 0
   rest: 0
   sdc: 0
+  sdc_block: 0
   sdc_display: 0
   sdc_tags: 0
   serialization: 0
