--- a/config/sync/field.storage.paragraph.field_icon_label_position.yml
+++ b/config/sync/field.storage.paragraph.field_icon_label_position.yml
@@ -23,6 +23,9 @@ settings:
     -
       value: left
       label: Left
+    -
+      value: hidden
+      label: Hidden
   allowed_values_function: ''
 module: options
 locked: false
