--- a/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
+++ b/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
@@ -16,6 +16,10 @@ props:
       type: string
       title: Text
       description: Text display with icon
+    icon_link_wrap:
+      type: string
+      title: Link Wrap
+      description: Show the icons as a link
     icon_href_classes:
           type: string
           title: Icon link classes
@@ -27,6 +31,7 @@ props:
         - right
         - bottom
         - left
+        - hidden
     icon_svg_classes:
       type: string
       title: CSS classes for the icon element
