--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.4",
+        "drupal/block_class": "^2.0",
         "drupal/cl_devel": "^2.0@beta",
         "drupal/cl_editorial": "^2.0@beta",
         "drupal/core-composer-scaffold": "^10.2",
