--- a/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
+++ b/web/themes/custom/icosaedrico/components/atoms/icon/icon.component.yml
@@ -50,8 +50,7 @@ props:
     icon_svg_stroke_width:
       type: string
       title: The SVG stroke width
-slots:
-  # Content to display in the chip.
-  icon_href:
+    icon_href:
+      type: string
       title: Link
       description: Icon link
