--- a/config/sync/field.field.paragraph.icon.field_icon_label_position.yml
+++ b/config/sync/field.field.paragraph.icon.field_icon_label_position.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: icon
 label: 'Posición del título'
 description: ''
-required: true
+required: false
 translatable: false
 default_value:
   -
