--- a/web/themes/custom/icosaedrico/icosaedrico.libraries.yml
+++ b/web/themes/custom/icosaedrico/icosaedrico.libraries.yml
@@ -2,6 +2,7 @@ global-styling:
   version: 1.x
   css:
     theme:
+      css/base/normalize.css: {}
       css/base/base.css: {}
       css/modules/modules.css: {}
       css/output.css: {}
